force-app/main/default/objects/MeetingAttachment__c/MeetingAttachment__c.object-meta.xml
<CustomObject>
    <description>Allows users to attach as many URL as they need to improve meetings information</description>
    <label>Meeting URL Attachment</label>
    <nameField>
        <displayFormat>Attachment-{000000}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting URL Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>