force-app/main/default/objects/MeetingAttachment__c/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <formula>HYPERLINK(UrlAttachment__c,DocumentName__c)</formula>
    <label>Attachment</label>
    <type>Text</type>
</CustomField>