force-app/main/default/objects/MeetingAttachment__c/fields/UrlAttachment__c.field-meta.xml
<CustomField>
    <fullName>UrlAttachment__c</fullName>
    <label>URL Attachment</label>
    <type>Url</type>
</CustomField>